Bug fixes and spacing

--- a/stylesheets/partials/features/_tags.scss
+++ b/stylesheets/partials/features/_tags.scss
@@ -1,7 +1,7 @@
 .tags {
 	font-size: .8em;
 	font-style: italic;
-	margin: .75em 0;
+	margin: .75em 0 0;
 	
 	.tag-list {
 		display: inline-block;
@@ -11,7 +11,7 @@
 
 		li {
 			display: inline-block;
-			padding: 0 .25em;
+			padding: .25em;
 
 			button {
 				background: $gray-light;
